tests/bad/wrong_inheritance/bad108.lat
class A extends B {
    int a;
}

class B extends A {
    int b;
}

int main () {
    return 0;
}